add publication page link and recent events/papers/course

--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
         <ul class="mobile-nav mobile-nav--main">
           <li class="current-menu-item"><a href="index.html">Home</a></li>
           <li><a href="https://leililab.github.io">Group</a></li>
+          <li><a href="https://leililab.github.io/publications">Publication</a></li>
           <li><a href="teaching.html">Teaching</a></li>
           <li><a href="resource.html">Resource</a></li>
           <li><a href="leili-bio.html">Bio</a></li>
-          <!-- <li> <a href="pubs.html">Publications</a> </li> -->
+          <!-- <li><a href="pubs.html">Publications</a></li> -->
           <!-- <li><a href="https://lileicc.github.io/blog/">Blog</a></li> -->
         </ul>
       </nav>
@@ -77,6 +78,7 @@
                   <ul class="nav-list">
                     <li class="current-menu-item"><a href="index.html">Home</a></li>
                     <li><a href="https://leililab.github.io">Group</a></li>
+                    <li><a href="https://leililab.github.io/publications">Publication</a></li>
                     <li><a href="teaching.html">Teaching</a></li>
                     <li><a href="resource.html">Resource</a></li>
                     <li><a href="leili-bio.html">Bio</a></li>
@@ -101,7 +103,7 @@
                   Computer Science at
                   <a href="https://www.cmu.edu/">Carnegie Mellon University</a>. I am also affiliated with
                   CMU <a moz-do-not-send="true"
-                    href="https://www.cylab.cmu.edu/">CyLab</a>, <a href="https://www.compbio.cmu.edu/index.html">CPCB</a>, and University of California Santa Barbara Computer Science Department. I work
+                    href="https://www.cylab.cmu.edu/">CyLab</a>, <a href="https://www.compbio.cmu.edu/index.html">CMU-Pitt CompBio</a>, and University of California Santa Barbara Computer Science Department. I work
                   on generative AI for language and science, including
                   multilingual NLP, machine translation (text, speech),
                   security of large language models, agentic LLM, and AI
@@ -130,22 +132,40 @@
             <div class="tab-content">
               <div class="tab-pane active" id="news">
                 <ul>
-                  <li>
-                    <img src="images/new-icon.gif"
-                      style="height:1.2em">Two papers are accepted by NeurIPS 2024. Topics include GenAI watermark and LLM reasoning in non-English languages. 
+                  <!-- 
+                  <li><img src="images/new-icon.gif" style="height:1.2em">
+                    
+                  </li>
+                  -->
+                  <li><img src="images/new-icon.gif" style="height:1.2em">
+                    CMU team achieved the Top-1 scores in IWSLT 2025 simultaneous speech translation competition (English-Chinese and English-German). The paper is <a href="https://aclanthology.org/2025.iwslt-1.31/">here</a>. 
+                  </li>
+                  <li><img src="images/new-icon.gif" style="height:1.2em">
+                    3 papers are accepted by ACL 2025 (1 Main + 2 Findings). Topics include <a href="https://aclanthology.org/2025.findings-acl.157/">simultaneous speech translation</a>, <a href="https://aclanthology.org/2025.acl-long.316/">LLM watermark detection</a>, and <a href="https://aclanthology.org/2025.findings-acl.1200/">multilingual translation for 400+ languages</a>. 
+                  </li>
+                  <li><img src="images/new-icon.gif" style="height:1.2em">
+                    We successfully organized <a href="https://genbio-workshop.github.io/2025/">the 2nd Generative AI for Biology workshop</a>, collocated with ICML 2025. 
+                  </li>
+                  <li><img src="images/new-icon.gif" style="height:1.2em">
+                    3 papers are accepted by ICML 2025. Topics include <a href="https://arxiv.org/abs/2506.11420">protein-protein complex design</a>, <a href="https://arxiv.org/abs/2502.17358">LLM copyright</a> and safety.
+                  </li>
+                  <li><img src="images/new-icon.gif" style="height:1.2em">
+                    Six papers (4 Main + 2 Findings) are accepted by NAACL 2025. Topics include <a href="https://arxiv.org/abs/2410.22499">machine translation with LLM</a>, <a href="https://arxiv.org/abs/2410.22480">scaling LLM inference time compute</a>, <a href="https://arxiv.org/abs/2402.02801">efficient finetuning</a>. 
+                  </li>
+                  <li><img src="images/new-icon.gif" style="height:1.2em">
+                    4 papers are accepted by ICLR 2025. Topics include <a herf="https://arxiv.org/abs/2402.05864">LLM watermark (permute-flip)</a>, <a herf="https://arxiv.org/abs/2410.01952">LLM reasoning</a>, <a herf="https://arxiv.org/abs/2410.11325">speculative LLM knowledge distillation</a>.  
+                  </li>
+                  <li>Two papers are accepted by NeurIPS 2024. Topics include <a href="https://arxiv.org/abs/2306.01953">GenAI watermark</a> and <a href="https://arxiv.org/abs/2405.17386">LLM reasoning in non-English languages</a>. 
                   </li>
                   <li>
-                    <img src="images/new-icon.gif"
-                      style="height:1.2em">Seven papers are accepted by EMNLP 2024, including three main, three Findings, and one system demo papers. 
-                      Topics include LLM preference learning, multilingual LLM training (LLaMAX), evaluation, and multimodal LLM.  
+                    Seven papers are accepted by EMNLP 2024, including three main, three Findings, and one system demo papers. 
+                      Topics include <a href="https://arxiv.org/abs/2406.12168">LLM preference learning</a>, <a href="https://arxiv.org/abs/2407.05975">multilingual LLM training (LLaMAX)</a>, <a href="https://arxiv.org/abs/2310.03304">evaluation</a>, and <a href="https://arxiv.org/abs/2410.10861">MT analysis tool</a>.  
                   </li>
-                  <li><img src="images/new-icon.gif"
-                      style="height:1.2em">One paper is accepted by KDD
+                  <li>One paper is accepted by KDD
                     2024 about Counterfactual Molecule Property
                     Explanation through Reinforcement Learning. <br>
                   </li>
-                  <li><img src="images/new-icon.gif"
-                      style="height:1.2em">Three papers are accepted by
+                  <li>Three papers are accepted by
                     ACL 2024 (including two Findings), topics including
                     <a moz-do-not-send="true"
                       href="https://arxiv.org/abs/2402.11436">Self-bias
@@ -154,16 +174,10 @@
                       translating any language </a>(even endangered
                     languages), and <a moz-do-not-send="true"
                       href="https://arxiv.org/abs/2311.09071">Understanding
-
-
-
-
-
                       LLaMA's Multilingual capability by analyzing its
                       vocabulary</a>. <br>
                   </li>
-                  <li><img src="images/new-icon.gif"
-                      style="height:1.2em">Three papers are accepted by
+                  <li>Three papers are accepted by
                     ICML 2024, topics including protein design (<a
                       moz-do-not-send="true"
                       href="https://arxiv.org/abs/2405.06693">SurfPro</a>
@@ -173,8 +187,7 @@
                       href="https://arxiv.org/abs/2402.09910">copyright
                       content detection in LLM training.</a><br>
                   </li>
-                  <li><img src="images/new-icon.gif"
-                      style="height:1.2em">Two papers are accepted by
+                  <li>Two papers are accepted by
                     NAACL 2024 - Findings, about <a
                       moz-do-not-send="true"
                       href="https://arxiv.org/abs/2311.09336">refinement
@@ -182,13 +195,11 @@
                       href="https://arxiv.org/abs/2304.04675">evaluating
                       LLM for multilingual translation</a>. <br>
                   </li>
-                  <li><img src="images/new-icon.gif"
-                      style="height:1.2em"> One paper is accepted by
+                  <li>One paper is accepted by
                     ICLR 2024 about LLM watermark to detect AI generated
                     text. <br>
                   </li>
-                  <li><img src="images/new-icon.gif"
-                      style="height:1.2em"> One paper is accepted by
+                  <li>One paper is accepted by
                     AAAI 2024 LLM for wildlife conservation.<br>
                   </li>
                   <li>Four papers are accepted to EMNLP 2023 (including
@@ -251,35 +262,11 @@
                       href="https://arxiv.org/abs/2210.03329">Model
                       correction on factual knowledge</a>, <a
                       href="https://arxiv.org/abs/2210.05035">Unsupervised
-
-
-
-
-
-
-
-
-
-
-
-
                       Text Generation Metric - SEScore</a>. </li>
                   <li>Our paper on <i>accelerated training of
                       Transformers on GPUs</i> is accepted to SC 2022.
                     The opensource software is released at <a
                       href="https://github.com/bytedance/lightseq">github
-
-
-
-
-
-
-
-
-
-
-
-
                       link</a> </li>
                   <li>Our paper <i>analyzing the user engagement and
                       activeness on content-based social media platforms</i>
@@ -499,6 +486,8 @@
               </div>
               <div class="tab-pane" id="papers">
                 <ul>
+                  <li> LLM/VLM copyright detection: <a href="https://arxiv.org/abs/2402.09910">DE-COP</a> and <a href="https://arxiv.org/abs/2502.17358">DIS-CO</a></li>
+                  <li> InfiniSST: simultaneous translation with unbounded streaming speech. <a href="https://aclanthology.org/2025.findings-acl.157/">paper</a></li>
                   <li> Protein Design: EnzyGen - A unified generative AI model for 3000 families of enzymes [<a href="https://arxiv.org/abs/2405.08205">paper</a>. </li>
                   <li> LLM Reasoning (weak LLM helps strong LLM). [<a
                       href="https://arxiv.org/abs/2305.13829">arxiv</a>]
@@ -508,6 +497,7 @@
                     to detect AI generated text, and <a
                       href="https://arxiv.org/abs/2302.03162">GINSEW</a>
                     to defend against model extraction attack. </li>
+                  <li> <a href="https://arxiv.org/abs/2305.14282">InstructScore</a>: Text generation evaluation metrics with explanation. </li>
                   <li> CGMH: A method for controllable text generation
                     from specified keywords. [<a
                       href="https://arxiv.org/abs/1811.10996">arxiv</a>]
