--- a/resource.html
+++ b/resource.html
@@ -45,6 +45,7 @@
       <ul class="mobile-nav mobile-nav--main">
         <li><a href="index.html">Home</a></li>
         <li><a href="https://leililab.github.io">Group</a></li>
+        <li><a href="https://leililab.github.io/publications">Publication</a></li>
         <li><a href="teaching.html">Teaching</a></li>
         <li class="current-menu-item"><a href="resource.html">Resource</a></li>
         <li><a href="leili-bio.html">Bio</a></li>
@@ -65,6 +66,7 @@
                 <ul class="nav-list">
                   <li><a href="index.html">Home</a></li>
                   <li><a href="https://leililab.github.io">Group</a></li>
+                  <li><a href="https://leililab.github.io/publications">Publication</a></li>
                   <li><a href="teaching.html">Teaching</a></li>
                   <li class="current-menu-item"><a href="resource.html">Resource</a></li>
                   <li><a href="leili-bio.html">Bio</a></li>
