--- a/teaching.html
+++ b/teaching.html
@@ -39,6 +39,7 @@
         <ul class="mobile-nav mobile-nav--main">
           <li><a href="index.html">Home</a></li>
           <li><a href="https://leililab.github.io">Group</a></li>
+          <li><a href="https://leililab.github.io/publications">Publication</a></li>
           <li class="current-menu-item"><a href="teaching.html">Teaching</a></li>
           <li><a href="resource.html">Resource</a></li>
           <li><a href="leili-bio.html">Bio</a></li>
@@ -58,6 +59,7 @@
                   <ul class="nav-list">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="https://leililab.github.io">Group</a></li>
+                    <li><a href="https://leililab.github.io/publications">Publication</a></li>
                     <li class="current-menu-item"><a href="teaching.html">Teaching</a></li>
                     <li><a href="resource.html">Resource</a></li>
                     <li><a href="leili-bio.html">Bio</a></li>
@@ -80,20 +82,25 @@
         <section class="section">
           <div class="wrap">
             <ul>
+              <li><a href="https://genaibiomed.github.io/GenAIBioMed2025Fall/">CMU 11781/02741 Generative AI for Biomedicine (graduate, Fall 2025)</a>
+              </li>
+              <li>CMU
+                11968 Large Language Model Systems (<a href="https://www.cmu.edu/online/gai-llm/">GenAI/LLM certificate program</a>. Fall 2025)
+              </li>
               <li><a href="https://llmsystem.github.io/llmsystem2025spring/">CMU
                 11868 Large Language Model Systems (graduate, Spring
-                2025)</a><br>
+                2025)</a>
               </li>
               <li><a href="https://llmsystem.github.io/llmsystem2024spring/">CMU
                   11868 Large Language Model Systems (graduate, Spring
-                  2024)</a><br>
+                  2024)</a>
               </li>
               <li><a href="course/11737mnlp23fa/">CMU 11737 Multilingual
                   NLP (graduate, Fall 2023)</a></li>
               <li><a href="course/dl23w/">UCSB CS190I Deep Learning
                   (undergrad, Winter 2023)</a></li>
               <li><a href="course/ml22fa/index.html">UCSB CS291K Machine
-                  Learning (graduate, Fall 2022)<br>
+                  Learning (graduate, Fall 2022)
                 </a></li>
               <li><a href="course/mldl22w/index.html">UCSB CS165B
                   Machine Learning (undergrad, Winter 2022) - focus on
