update the style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       natural language processing, machine translation, text generation, AI for science,
       drug discovery, protein design, large language models, generative AI, AI safety">
     <meta name="author" content="Lei Li">
-    <link href="style/style.css" rel="stylesheet" type="text/css">
+    <link href="style/style.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style/skeleton-tabs.css">
     
     <script src="script/skeleton-tabs.js"></script>
