--- a/resource.html
+++ b/resource.html
@@ -9,7 +9,7 @@
       natural language processing, machine translation, text generation, AI for science,
       drug discovery, protein design, large language models, generative AI, AI safety">
   <meta name="author" content="Lei Li" />
-  <link href="style/style.css" rel="stylesheet" type="text/css" />
+  <link href="style/style.min.css" rel="stylesheet" type="text/css" />
   <script src="script/jquery-3.7.0.min.js"></script>
   <script src="script/mobile.js"></script>  
   <title>Lei LI's Software and Data Resources</title>
