add genai for protein talk

--- a/teaching.html
+++ b/teaching.html
@@ -164,6 +164,9 @@ href="TALKS/deep_learning_for_answering_questions_leili_nlpcc_adl2016.pdf">Slide
                   </li>
                 </ul>
               </li>
+              <li>
+                Princeton University AI2 Distinguished Talk: <a href="TALKS/Generative_AI_for_Functional_Protein_Design-leili2025.3.5.pdf">Generative AI for Functional Protein Design</a>, March 5, 2025.
+              </li>
               <li>University of Massachusetts Boston Invited Talk: <a href="TALKS/multilingual-LLM-leili2024.11.pdf">Towards Scaling Large Language Models to 1000 Languages - Challenges and Advances</a>. Nov 4, 2024. </li>
               <li>Invited talk at MIT FutureTech Workshop on the Role of AI in Science: <a href="TALKS/Watermarking_and_AI_detection_leili2024.11.3.pdf"> Watermarking and Detecting AI Generation. Nov 3, 2024. </a></li>
               <li>Univ. of Pittsburgh ISP Seminar: <a href="TALKS/LLM_Evaluation_and_alignment2024.10.pdf">The Science of Evaluation
