add talk slides

--- a/teaching.html
+++ b/teaching.html
@@ -117,7 +117,7 @@
               <h1>Tutorial</h1>
             </div>
             <ul>
-              <li>ACL 2024 Tutorial: <a moz-do-not-send="true"
+              <li>ACL/NeurIPS/ADL 2024 Tutorials: <a moz-do-not-send="true"
                   href="https://leililab.github.io/llm_watermark_tutorial/">Watermarking
                   for Large Language Models</a>.<br>
               </li>
@@ -152,6 +152,7 @@ href="TALKS/deep_learning_for_answering_questions_leili_nlpcc_adl2016.pdf">Slide
               <h1>Talks</h1>
             </div>
             <ul>
+              <li>Talk on <a href="TALKS/AI-for-drug-design-intro-leili.2025.11.25.pdf">Accelerating Drug Design with Generative AI</a> November, 2025. </li>
               <li>ACDL 2025 Talks, June 18, 2025. 
                 <ul>
                   <li><a href="TALKS/LLM_Evaluation_leili_2025.6.18.pdf">  The Science of Evaluation for Large Language Models</a>
