add course and new bib, and new papers.

--- a/teaching.html
+++ b/teaching.html
@@ -82,6 +82,9 @@
         <section class="section">
           <div class="wrap">
             <ul>
+              <li><a href="https://llmsystem.github.io/llmsystem2026spring/">CMU
+                11868 Large Language Model Systems (graduate, Spring
+                2026)</a></li>
               <li><a href="https://genaibiomed.github.io/GenAIBioMed2025Fall/">CMU 11781/02741 Generative AI for Biomedicine (graduate, Fall 2025)</a>
               </li>
               <li>CMU
