--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
                   </li>
                   -->
                   <li><img src="images/new-icon.gif" style="height:1.2em">
+                    New paper in Nature Communications on benchmarking generative AI for DNA tasks. <a href="https://rdcu.be/eQy1r">DNALongBench</a> 
+                  </li>
+                  <li><img src="images/new-icon.gif" style="height:1.2em">
                     CMU team achieved the Top-1 scores in IWSLT 2025 simultaneous speech translation competition (English-Chinese and English-German). The paper is <a href="https://aclanthology.org/2025.iwslt-1.31/">here</a>. 
                   </li>
                   <li><img src="images/new-icon.gif" style="height:1.2em">
@@ -486,6 +489,7 @@
               </div>
               <div class="tab-pane" id="papers">
                 <ul>
+                  <li> <a href="https://rdcu.be/eQy1r">DNALongBench</a> </li>
                   <li> LLM/VLM copyright detection: <a href="https://arxiv.org/abs/2402.09910">DE-COP</a> and <a href="https://arxiv.org/abs/2502.17358">DIS-CO</a></li>
                   <li> InfiniSST: simultaneous translation with unbounded streaming speech. <a href="https://aclanthology.org/2025.findings-acl.157/">paper</a></li>
                   <li> Protein Design: EnzyGen - A unified generative AI model for 3000 families of enzymes [<a href="https://arxiv.org/abs/2405.08205">paper</a>. </li>
